# xfoil_light

./: CMakeLists.txt  README.md
src/: spline.f  xbl.f  xblsys.f  xfoil.f  xgdes.f  xgeom.f  xoper.f  xpanel.f  xsolve.f  xutils.f
src_cs/: c_spline.f  c_xbl.f  c_xblsys.f  c_xfoil.f  c_xgdes.f  c_xgeom.f  c_xoper.f  c_xpanel.f  c_xsolve.f  c_xutils.f  complexify.mod
